--- a/src/app/input.css
+++ b/src/app/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+   /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+  }
+}
+
+.lgBorder {
+    @apply bg-gray-200 border-gray-200 border-opacity-10 bg-opacity-10 rounded-l-lg  rounded-r-none border-x border-y border-r-0
+}
