--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,12 @@
 @tailwind components;
 @tailwind utilities; */
 
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  /* --font-fira-sans: 'Fira Sans Extra Condensed', sans-serif; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,6 +18,7 @@
   }
 }
 
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,6 +27,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
 }
 
 @layer utilities {
