--- a/src/app/input.css
+++ b/src/app/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --font-fira-sans: 'Fira Sans Extra Condensed', sans-serif;
+  }
+
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
@@ -13,6 +17,11 @@
         scrollbar-width: none;  /* Firefox */
   }
 }
+
+body {
+    font-family: var(--font-fira-sans);
+  }
+  
 
 .lgBorder {
     @apply bg-gray-200 border-gray-200 border-opacity-10 bg-opacity-10 rounded-l-lg  rounded-r-none border-x border-y border-r-0
