updated accruedLeavs once it has been apporved and also added product hunt  button in hero section

--- a/src/app/(public)/_homeComponent/HeroSection/style.css
+++ b/src/app/(public)/_homeComponent/HeroSection/style.css
@@ -22,3 +22,48 @@
     }
   }
   
+  .custom-ping{
+    animation: ping 3s cubic-bezier(0, 0, 0.2,0) infinite;
+  }
+
+  @keyframes ping {
+    /* 0%, 25%{
+      transform: scale(0.4);
+      opacity: 0;
+    } */
+    50%{
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+
+  .color-shift{
+    animation: colorChange 6s linear infinite;
+  }
+  .color-shift:nth-child(1) {
+    animation-delay: 0s; 
+  }
+  
+  .color-shift:nth-child(2) {
+    animation-delay: 2s; 
+  }
+  
+  .color-shift:nth-child(3) {
+    animation-delay: 4s; 
+  }
+
+  @keyframes colorChange {
+    0%, 33.33% {
+      color: #0f172a;
+    }
+    33.33%, 66.66% {
+      color: #2563eb;
+    }
+    66.66%, 100% {
+      color: #0f172a;
+    }
+  }
