--- a/src/app/(public)/_homeComponent/HeroSection/style.css
+++ b/src/app/(public)/_homeComponent/HeroSection/style.css
@@ -61,7 +61,7 @@
       color: #0f172a;
     }
     33.33%, 66.66% {
-      color: #2563eb;
+      color: #E85A4F;
     }
     66.66%, 100% {
       color: #0f172a;
