--- a/src/app/input.css
+++ b/src/app/input.css
@@ -3,26 +3,41 @@
 @tailwind utilities;
 
 :root {
-    --font-fira-sans: 'Fira Sans Extra Condensed', sans-serif;
-  }
+  --font-fira-sans: 'Fira Sans Extra Condensed', sans-serif;
+}
 
 @layer utilities {
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
-   /* Hide scrollbar for IE, Edge and Firefox */
-    .no-scrollbar {
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
 
 body {
-    font-family: var(--font-fira-sans);
-  }
-  
+  font-family: var(--font-fira-sans);
+}
 
 .lgBorder {
-    @apply bg-gray-200 border-gray-200 border-opacity-10 bg-opacity-10 rounded-l-lg  rounded-r-none border-x border-y border-r-0
+  @apply bg-gray-200 border-gray-200 border-opacity-10 bg-opacity-10 rounded-l-lg  rounded-r-none border-x border-y border-r-0;
+}
+
+#reactSchedulerOutsideWrapper::-webkit-scrollbar {
+  height: 10px; /* horizontal scrollbar height */
+  width: 10px; /* vertical scrollbar width */
+}
+#reactSchedulerOutsideWrapper::-webkit-scrollbar-track {
+  background-color: gray-400; /* track background color */
+  border-radius: 8px;
+}
+#reactSchedulerOutsideWrapper::-webkit-scrollbar-thumb {
+  background-color: #a3a1a1; /* thumb color */
+  border-radius: 8px;
+}
+#reactSchedulerOutsideWrapper::-webkit-scrollbar-corner {
+  background-color: gray-400; /* or transparent or theme color */
 }
